--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/react-dom": "^18.2.7",
         "@types/three": "0.152.1",
         "cra-template": "1.2.0",
+        "emoji-dictionary": "^1.0.12",
         "force": "^0.0.3",
         "framer-motion": "^6.5.1",
         "justgage": "^1.7.0",
